--- a/index.html
+++ b/index.html
@@ -46,5 +46,68 @@
             </div>
         </nav>
     </header>
+    <footer class="gray-footer light-gray py-2">
+        <div class="d-flex justify-content-center align-items-center text-uppercase py-4">
+            <ul class="nav border-top border-bottom">
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">Search</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">Advertise</a>
+                </li>
+            </ul>
+            <div class="rounded-circle border border-2 d-flex justify-content-center align-items-center" style="width: 5em; height: 5em;">
+                <i class="fa fa-map-marker fa-2x d-block" aria-hidden="true"></i>
+            </div>
+            <ul class="nav border-top border-bottom">
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">Search</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-6 light-gray" href="#">Advertise</a>
+                </li>
+            </ul>
+        </div>
+        <div class="row pt-3">
+            <div class="col-4 text-center">
+                <h5>Subscribe</h5>
+                <form class="row justify-content-center">
+                    <div class="col-6 p-0">
+                      <label for="inputemail" class="visually-hidden">Email</label>
+                      <input type="email" class="form-control" id="inputemail" placeholder="Insert your e-mail here">
+                    </div>
+                    <div class="col-2 p-0">
+                      <button type="submit" class="btn gray-footer-btn light-gray w-100 m-0">Send</button>
+                    </div>
+                  </form>
+            </div>
+            <div class="col-4 text-center">
+                <h5>Contact</h5>
+                <p>
+                    Have a question or suggestion?
+                </p>
+                <a href="#" class="d-block primary-color text-decoration-none">contact@events.com</a>
+            </div>
+            <div class="col-4 text-center">
+                <h5>About</h5>
+                <p>
+                    [Event] is online plateform that works to improve and increase social life connections, when this nightmare that we are currently living in is over
+                    <a href="#" class="primary-color text-decoration-none">learn more.</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
