--- a/index.html
+++ b/index.html
@@ -114,7 +114,22 @@
         </ul>
     </section>
 
-    <footer class="bg-gray-footer light-gray py-2">
+    <section id="event-sample">
+        <div class="row bg-primary-color p-5">
+            <div class="col-6">
+                <h6 class="text-white fw-bold mb-3">[Events] near you</h6>
+                <p class="text-white fw-lighter">Every month a new you might find [Events] near you and enjoy the company with people whom you can share mutual interests</p>
+                <div class="">
+                    <button class="btn mt-4 fw-bold primary-color bg-primary-gray" type="button">Find a [Event]</button>
+                </div>
+            </div>
+            <div class="col-4">
+                <img src="/Assets/Images/group-2.jpg" class="rounded-circle w-100" alt="group-2">
+            </div>
+        </div>
+    </section>
+
+    <footer class="light-gray pt-2" style="background-color: rgb(0, 0, 0);">
         <div class="d-flex justify-content-center align-items-center text-uppercase py-4">
             <ul class="nav border-top border-bottom">
                 <li class="nav-item">
@@ -148,18 +163,18 @@
                 </li>
             </ul>
         </div>
-        <div class="row pt-3">
+        <div class="row p-3">
             <div class="col-4 text-center">
                 <h5>Subscribe</h5>
                 <form class="row justify-content-center">
-                    <div class="col-6 p-0">
-                      <label for="inputemail" class="visually-hidden">Email</label>
-                      <input type="email" class="form-control" id="inputemail" placeholder="Insert your e-mail here">
+                    <div class="col-7 p-0">
+                        <label for="inputemail" class="visually-hidden">Email</label>
+                        <input type="email" class="form-control bg-transparent" style="border: 1px solid #444" id="inputemail" placeholder="Insert your e-mail here">
                     </div>
-                    <div class="col-2 p-0">
-                      <button type="submit" class="btn bg-gray-footer-btn light-gray w-100 m-0">Send</button>
+                    <div class="col-3 p-0">
+                        <button type="submit" class="btn bg-gray-footer-btn light-gray w-100 m-0">Send</button>
                     </div>
-                  </form>
+                </form>
             </div>
             <div class="col-4 text-center">
                 <h5>Contact</h5>
@@ -174,6 +189,30 @@
                     [Event] is online plateform that works to improve and increase social life connections, when this nightmare that we are currently living in is over
                     <a href="#" class="primary-color text-decoration-none">learn more.</a>
                 </p>
+            </div>
+        </div>
+        <div class="footer-btn">
+            <div class="copyright-content px-3 d-flex justify-content-between bg-gray-footer py-1">
+                <div class="py-2 my-auto">
+                    <a href="#" class="text-white text-decoration-none">
+                        <i class="fa-brands fa-facebook-square me-4"></i>
+                    </a>
+                    <a href="#" class="text-white text-decoration-none">
+                        <i class="fa-brands fa-twitter me-4"></i>
+                    </a>
+                    <a href="#" class="text-white text-decoration-none">
+                        <i class="fa-brands fa-instagram me-4"></i>
+                    </a>
+                    <a href="#" class="text-white text-decoration-none">
+                        <i class="fa-brands fa-tumblr me-4"></i>
+                    </a>
+                    <a href="#" class="text-white text-decoration-none">
+                        <i class="fa-brands fa-linkedin me-4"></i>
+                    </a>
+                </div>
+                <div class="my-auto d-block py-2">
+                    <p class="">&copy; 2020 [Events], Inc.All rights reserved </p>
+                </div>
             </div>
         </div>
     </footer>
