third section in index page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <section id="event-sample">
         <div class="row bg-primary-color p-5">
-            <div class="col-6">
+            <div class="col-8">
                 <h6 class="text-white fw-bold mb-3">[Events] near you</h6>
                 <p class="text-white fw-lighter">Every month a new you might find [Events] near you and enjoy the company with people whom you can share mutual interests</p>
                 <div class="">
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="col-4">
-                <img src="/Assets/Images/group-2.jpg" class="rounded-circle w-100" alt="group-2">
+                <img src="/Assets/Images/group-2.jpg" class="rounded-circle mx-auto d-block" style="width: 15em; height: 15em;" alt="group-2">
             </div>
         </div>
     </section>
