update third section

--- a/index.html
+++ b/index.html
@@ -118,13 +118,34 @@
         <div class="row bg-primary-color p-5">
             <div class="col-8">
                 <h6 class="text-white fw-bold mb-3">[Events] near you</h6>
-                <p class="text-white fw-lighter">Every month a new you might find [Events] near you and enjoy the company with people whom you can share mutual interests</p>
+                <p class="text-white fw-lighter my-4">Every month a new you might find [Events] near you and enjoy the company with people whom you can share mutual interests</p>
                 <div class="">
                     <button class="btn mt-4 fw-bold primary-color bg-primary-gray" type="button">Find a [Event]</button>
                 </div>
             </div>
             <div class="col-4">
                 <img src="/Assets/Images/group-2.jpg" class="rounded-circle mx-auto d-block" style="width: 15em; height: 15em;" alt="group-2">
+            </div>
+        </div>
+        <div class="row bg-secondary p-5">
+            <div class="col-8">
+                <h6 class="text-white fw-bold mb-3">[Events] connecting you</h6>
+                <p class="text-white fw-lighter my-4">You can create [Events] events around your area and share them with people you know and with whoever wants to connect</p>
+                <div class="">
+                    <button class="btn mt-4 fw-bold primary-color bg-primary-gray" type="button">Find a [Event]</button>
+                </div>
+            </div>
+            <div class="col-4">
+                <img src="/Assets/Images/group-3.jpg" class="rounded-circle mx-auto d-block" style="width: 15em; height: 15em;" alt="group-2">
+            </div>
+        </div>
+        <div class="row bg-primary-blue p-5">
+            <div class="col-8">
+                <h6 class="text-white fw-bold mb-3">[Events] spending love</h6>
+                <p class="text-white fw-lighter my-4">[Events] let you meet new people, share interests and spreading love</p>
+            </div>
+            <div class="col-4">
+                <img src="/Assets/Images/group-4.jpg" class="rounded-circle mx-auto d-block" style="width: 15em; height: 15em;" alt="group-2">
             </div>
         </div>
     </section>
