--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
 
     <section id="jumbotron">
-        <div class="p-5 pb-0 pb-md-5 mb-4 rounded-3" style="background-image: url('/Assets/Images/group-1.jpg');background-repeat: no-repeat; background-position: center; background-size: cover;">
+        <div class="p-5 pb-0 pb-md-5 mb-md-4 rounded-3" style="background-image: url('/Assets/Images/group-1.jpg');background-repeat: no-repeat; background-position: center; background-size: cover;">
             <div class="container-fluid d-flex flex-column justify-content-end justify-content-md-center align-items-center">
                 <h1 class="display-5 fs-4 fw-bold text-uppercase text-white text-center pb-2" style="text-shadow: 1px 1px 2px #1f1f1f;">
                     [Events]...Your gateway to connect with events around your area
@@ -75,7 +75,7 @@
         </div>
     </section>
     
-    <section id="steps">
+    <section id="steps" class="d-none d-md-block">
         <h4 class="primary-color text-center pb-4">[Event] works in four simple steps.</h4>
         <ul class="row list-unstyled m-3">
             <li class="col col-md-6 text-center">
